# Pathfinder_LLMModelAPI

./: README.md
llm_api/: README.md  pyproject.toml
llm_api/src/llm_api/: main.py
llm_api/src/llm_api/api/: api_routes.py  exception_handlers.py
llm_api/src/llm_api/core/: config.py  exceptions.py  metrics.py
llm_api/src/llm_api/schemas/: chat.py  health_check.py
llm_api/src/llm_api/services/: health_check_service.py  llm_service.py
