[project]
name = "llm-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco",email = "marcoantonioporsch@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "prometheus-client (>=0.23.1,<0.24.0)"
]

[tool.poetry]
packages = [{include = "llm_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
